[project]
name = "task1-dl"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "3.11.12"
dependencies = [
    "fiftyone (==1.13.4)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "albumentations (>=2.0.8,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "tensorflow (>=2.21.0,<3.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "torchvision (>=0.26.0,<0.27.0)",
    "torchsummary (>=1.5.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
